Tweak some layout issues on the convenor dashboard

--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -281,10 +281,6 @@ p.copyright {
     padding-bottom: 15px;
 }
 
-.grouped-button-margin {
-    margin-bottom: 2px;
-}
-
 .color-card {
     position: relative;
     width: 25%;
